Update copyright year in index.html

--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                 <div class="bios-header">
                     <div class="bios-title">AWARD BIOS SETUP UTILITY</div>
                     <div class="bios-version">Version 6.00PG • <span id="biosDate">02/11/2026</span></div>
-                    <div class="bios-subtitle">Copyright (C) 2023 American Megatrends, Inc.</div>
+                    <div class="bios-subtitle">Copyright (C) 2026 JR.</div>
                 </div>
 
                 <div class="menu-tabs">
